<resources>
    <string name="app_name">Water Balance Tracker</string>

    <!--    Login screen    -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_signUp">Sign up</string>
    <string name="login_registrationIn">Register in</string>
    <string name="login_loginTo">Login to</string>
    <string name="login_later">Later</string>

    <!--    Poll screens    -->
    <string name="poll_intro_app_name">Water Balance</string>
    <string name="poll_intro_get_started">Get Started</string>
    <string name="poll_step1">Step 1</string>
    <string name="poll_step2">Step 2</string>
    <string name="poll_different_amounts_of_water_per_day">Men and women have different amounts of water per day</string>
    <string name="poll_your_gender">What is your gender?</string>
    <string name="poll_man">Man</string>
    <string name="poll_woman">Woman</string>
    <string name="poll_hello_what_is_your_name">Hello! What is your name?</string>
    <string name="poll_help_us_address_you_by_name">This will help us address you by name. Your name will be visible only to you.</string>
    <string name="poll_how_old_are_you">How old are you?</string>
    <string name="poll_enter_your_weight">Enter your weight to make it easier to determine your daily water intake</string>
    <string name="poll_older_person_gets_more_water">The older a person gets, the more water he needs to drink</string>
    <string name="poll_what_is_your_weight">What is your weight?</string>
    <string name="poll_great_water_intake_calculated">We have calculated your daily water intake requirement. If your doctor has advised a different amount, please follow your doctor\'s recommendations.</string>
    <string name="poll_your_rate_of_water_per_day">Your rate of water consumption per day:</string>
    <string name="poll_edit">Edit</string>
    <string name="poll_great">Great!</string>

    <!--    Home screen    -->
    <string name="home_today">Today</string>
    <string name="home_from_rate">From %1$d ml</string>
    <string name="home_current_rate">%1$d ml</string>
    <string name="home_chooseDrink">Choose the drink:</string>
    <string name="home_selectAmount">Select the amount in ml:</string>
    <string name="home_other">Other</string>
    <string name="home_enterAmount">Enter the amount of milliliters</string>

    <!--    Beverages text    -->
    <string name="beverages_water">Water</string>
    <string name="beverages_coffee">Coffee</string>
    <string name="beverages_tea">Tea</string>
    <string name="beverages_juice">Juice</string>
    <string name="beverages_milk">Milk</string>
    <string name="beverages_soda">Soda</string>

    <!--    Create cup screen    -->
    <string name="createCup_enterNameOfBeverages">Enter the name of the beverages</string>
    <string name="createCup_enterVolumeOfDrink">Enter the volume of the drink</string>


    <!--    Interval text    -->
    <string name="interval_breakfast">Before breakfast %1$s from to %2$s</string>
    <string name="interval_lunch">Before lunch %1$s from to %2$s</string>
    <string name="interval_dinner">Before dinner %1$s from to %2$s</string>

    <!--    Stats screen    -->
    <string name="stats_statistics">Statistics</string>
    <string name="stats_day">Day</string>
    <string name="stats_week">Week</string>
    <string name="stats_month">Month</string>
    <string name="stats_year">Year</string>

    <!--    Another text    -->
    <string name="text_next">Next</string>
    <string name="text_back">Back</string>
    <string name="text_apply">Apply</string>
    <string name="text_log_out">Log out</string>
    <string name="text_volume_ml">%1$d ml</string>
    <string name="text_daily_dose_water_drunk">Your daily dose of water has been drunk!</string>
    <string name="text_continue">Continue</string>
    <string name="text_delete">Delete</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>
    <string name="text_add">Add</string>
    <string name="text_beverages">Beverages</string>
    <string name="rate_perfect">Perfect</string>
    <string name="rete_successMessage">You did an excellent job and reached your daily water intake goal. Maintaining water balance is an important step toward good health and well-being. Keep up the great work!</string>

</resources>