<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueVariant4">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTopWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_poll_top_wave" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBottomWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_poll_bottom_wave" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/poll_step1"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        app:fontFamily="@font/ledger_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTopWave" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:text="@string/poll_hello_what_is_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreate" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@drawable/background_blue_with_border"
        android:inputType="textPersonName"
        android:paddingHorizontal="24dp"
        android:paddingVertical="4dp"
        android:textColor="@color/colorWhite"
        app:fontFamily="@font/koh_santepheap_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHello" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvYourGander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="24dp"
        android:text="@string/poll_your_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />


    <RadioGroup
        android:id="@+id/genderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourGander">

        <RadioButton
            android:id="@+id/cbMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/poll_man"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/cbWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingStart="6dp"
            android:text="@string/poll_woman"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_selector_button"
        android:enabled="false"
        android:text="@string/text_next"
        android:textAllCaps="false"
        android:fontFamily="@font/jet_brains_mono_regular"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>