<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueVariant4"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTopWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_home_top_wave" />

    <com.babiichuk.waterbalancetracker.app.ui.view.progress.CircularProgressView
        android:id="@+id/waterProgress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:text="@string/rate_perfect"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        app:fontFamily="@font/ledger_regular" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="14dp"
        android:justificationMode="inter_word"
        android:text="@string/rete_successMessage"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:fontFamily="@font/koh_santepheap_regular" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button_blue_light"
        android:paddingHorizontal="46dp"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:fontFamily="@font/jet_brains_mono_regular" />

</LinearLayout>