<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_round_white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_round_selector_blue_white"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp"
            android:text="@string/stats_day"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            app:dividerColor="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_round_selector_blue_white"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp"
            android:text="@string/stats_week"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            app:dividerColor="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_round_selector_blue_white"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp"
            android:text="@string/stats_month"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            app:dividerColor="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_round_selector_blue_white"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp"
            android:text="@string/stats_year"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

</merge>